# LoCoMotive

./: .gitignore  .gitmodules  README.md
BC/: BC_README.md  requirements.txt
BC/data/metadata/: run_log.csv
BC/docs/: data_collection.md  lab_run_checklist.md  model_testing.md  pretrained_inference.md
BC/results/metrics/: pretrained_baseline.csv
BC/ros2_adapter/: package.xml  setup.cfg  setup.py
BC/ros2_adapter/launch/: vint_nav.launch.py
BC/ros2_adapter/ros2_adapter/: pd_controller_node.py  topic_config.py  vint_infer_node.py
BC/scripts/: 00_preflight_ros2.sh  01_robot_check.sh  02_run_pretrained_ros2.sh  create_topomap_ros2.py  finetune_vint.py  plot_results.py  process_bags_ros2.py
RL/: README.md  evaluate.py  locobot_nav_env.py  requirements.txt  test_env.py  train.py
RL/scripts/: evaluate.py  nav_env.py  plotting.py  test_nav_env.py  train.py
RL/scripts/tb_logs/SAC_0/: events.out.tfevents.1777163189.white.15645.0  events.out.tfevents.1777233995.white.94283.0  events.out.tfevents.1777411623.white.189.0
