<?xml version="1.0"?>
<package format="3">
  <name>ros2_adapter</name>
  <version>0.0.1</version>
  <description>ROS2 adapter nodes for ViNT deployment on LoCoBot.</description>
  <maintainer email="team@example.com">LoCoMotive Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
